--- a/_source/mallet/_html.pug
+++ b/_source/mallet/_html.pug
@@ -8,11 +8,11 @@ block header
   h1|{% include dove/logo.html name="!{layout_name}" %}
 block nav
   div.mv
+    +sna(layout_name+"/samples") Samples
+    +itext|:
     b Html
     +angle
     +site_nav(layout_name)
-    +bull
-    +sna(layout_name+"/samples"): small| more..
   +thin_hr
 block footer
   +thin_hr
