--- a/_scss/_dove/helper.scss
+++ b/_scss/_dove/helper.scss
@@ -31,6 +31,9 @@
 .float-left  { float:left }
 .float-right { float:right }
 
+.relative { position:relative }
+.absolute { position:absolute }
+
 .text-left    { text-align:left }
 .text-right   { text-align:right }
 .text-center  { text-align:center }
@@ -121,6 +124,7 @@
   margin:.25rem .25rem;
   border-radius:.25em;
   line-height:1;
+  text-align:center;
 }
 
 .icon { &,i { font-style:normal !important }}
