--- a/_source/prime/_html.pug
+++ b/_source/prime/_html.pug
@@ -1,5 +1,6 @@
 extends /_source/_layouts/prime
 block append update_vars
+  - icon = '🌌'
   - path = [layout_name,path].join('/')
 block prepend front_matter
   +l| index: false
@@ -7,6 +8,8 @@ block header
   h1|{% include dove/logo.html name="!{layout_name}" %}
 block nav
   div.mv
+    +sna(layout_name+"/samples") Samples
+    +itext|:
     b Html
     +angle
     +site_nav(layout_name)
