--- a/_source/prime/page.html.pug
+++ b/_source/prime/page.html.pug
@@ -6,7 +6,4 @@ block append vars
 block content
   h1 Page title
   p: code // page content
-  .mt-6
-  hr
-  h2 Other pages
-  +include('pages','pages.md')
+  +page_footer
