--- a/_source/prime/_html.pug
+++ b/_source/prime/_html.pug
@@ -1,6 +1,6 @@
 extends /_source/_layouts/prime
 block append update_vars
-  - icon = '🌌'
+  - icon = '🦅'
   - path = [layout_name,path].join('/')
 block prepend front_matter
   +l| index: false
