--- a/_source/prime/samples.html.pug
+++ b/_source/prime/samples.html.pug
@@ -39,7 +39,7 @@ block content
 
   div(style="margin-top:3rem")
   p.
-    #[strong #[a(href="./preview") Preview the theme]] to see what it looks like and #[strong #[a(href="./#how-to-use") start using it]] today!
+    #[strong #[a(href="./preview") Preview the theme]] to see how it looks and #[strong #[a(href="./#how-to-use") start using it]] today!
 
   +thin_hr
   nav.mv
