--- a/_source/index.html.pug
+++ b/_source/index.html.pug
@@ -8,6 +8,17 @@ block append style
     }
   style.
     ._header h1 { margin-top:1em }
+    ._header h2 { padding-bottom:1.3em;margin-top:-0.7em }
+    ._header #icon {
+      position: absolute;
+      font-size:1em;
+      opacity:.2;
+      right:10em;
+      line-height:1;
+      z-index:-1;
+      top:5em;
+      scale:14;
+    }
     #pages_ ul,
     #posts_ ul,
     .markdown-body .rapat { margin:1rem 0;padding-left:1.3em }
@@ -15,29 +26,24 @@ block append style
     #posts_ ul li,
     .markdown-body .rapat li { margin-left:0 }
 block header
+  .relative: #icon !{icon}
   h1 🕊️ The !{site_title} Project
 mixin index_nav(sub)
-  +sna(sub+"/"): b !{capitalize(sub)}
+  b: +sna(sub+"/")| !{capitalize(sub)}
   +angle
-  +sna(sub+"/preview.html")| Preview
+  +sna(sub+"/preview")| Preview
   +bull
-  +sna(sub+"/home.html")| Home
-  +bull
-  +sna(sub+"/page.html")| Page
-  +bull
-  +sna(sub+"/post.html")| Post
-  +bull
-  +sna(sub+"/404.html")| 404
+  +sna(sub+"/samples")| Samples
 block content
   .flex(style="gap:3rem")
     .fill#themes_
       h3.mt-0 Themes
       p.text-grey We are working on the following themes.
-      nav: ul.rapat
+      ul.rapat
         li: +index_nav('core')
         li: +index_nav('mallet')
-        //- li: +index_nav('nova')
         li: +index_nav('prime')
+        //- li: +index_nav('nova')
   +thin_hr
   p.text-grey Development posts and pages.
   //- - exclude_pages = [ ].join(",");
@@ -48,13 +54,13 @@ block content
     #pages_(style="min-width:250px")
       h3.mt-0 Pages
       |{{ pages | markdownify }}
-      nav: ul: li: +a('404') 404
+      ul: li: +a('404') 404
     #posts_(style="min-width:250px")
       h3.mt-0 Posts
       |{{ posts | markdownify }}
   +thin_hr
   +if_dev
-    nav: +include('nav_test','dove/nav_test.md')
+    +include('nav_test','dove/nav_test.md')
     +thin_hr
   h3 Configurations
   +include_relative('config','config.md')
