--- a/_source/prime/samples.html.pug
+++ b/_source/prime/samples.html.pug
@@ -29,12 +29,12 @@ block content
 
   nav.mv
     b Html
-    +angle
+    +itext|:
     +site_nav(layout_name)
 
   nav.mv
     b Md
-    +angle
+    +itext|:
     +site_nav(layout_name+'/md')
 
   div(style="margin-top:3rem")
