update core theme

--- a/_source/core/_html.pug
+++ b/_source/core/_html.pug
@@ -1,5 +1,6 @@
 extends /_source/_layouts/core
 block append update_vars
+  - icon = '💎'
   - path = [layout_name,path].join('/')
 block prepend front_matter
   +l| index: false
@@ -7,8 +8,10 @@ block header
   h1|{% include dove/logo.html name="!{layout_name}" %}
 block nav
   div.mv
-    b Html
+    +sna(layout_name+"/samples") Samples
     +angle
+    b Html
+    +itext|:
     +site_nav(layout_name)
   +thin_hr
 block footer
