--- a/_includes/dove/logo.html
+++ b/_includes/dove/logo.html
@@ -1,13 +1,11 @@
 {%- assign _logo = include.name | default: page.layout %}
 {%- case _logo %}
-{%- when 'prime' or 'prime-page' or 'prime-post' %}
-<span class="_logo"><a href="{{ site.home_url }}/prime">🦅 The Prime Theme</a></span>
-{%- when 'nova' or 'nova-page' or 'nova-post' %}
-<span class="_logo"><a href="{{ site.home_url }}/nova">🌌 Nova</a></span>
+{%- when 'core' or 'core-page' or 'core-post' %}
+<span class="_logo"><a href="{{ site.home_url }}/core">💎 The Core Theme</a></span>
 {%- when 'mallet' or 'mallet-page' or 'mallet-post' %}
 <span class="_logo"><a href="{{ site.home_url }}/mallet">⚒️ Techie Joe's Mallet</a></span>
-{%- when 'core' or 'core-page' or 'core-post' %}
-<span class="_logo"><a href="{{ site.home_url }}/core">💎 Core</a></span>
+{%- when 'prime' or 'prime-page' or 'prime-post' %}
+<span class="_logo"><a href="{{ site.home_url }}/prime">🦅 The Prime Theme</a></span>
 {%- else %}
 <span class="_logo"><a href="{{ site.home_url }}/">🕊️ The Dove Project</a></span>
 {%- endcase %}
