--- a/_source/core/test_code-blocks.html.pug
+++ b/_source/core/test_code-blocks.html.pug
@@ -1,12 +1,7 @@
-extends _html
+extends _html_test
 block append vars
   - path   = 'test_code-blocks.html'
-  - title  = `Test Code Blocks`
-block append nav
-  nav.mv: +test_nav(layout_name)
-  +thin_hr
+  - title  = `Code blocks`
+  - description = `Code block samples.`
 block content
   +include('code-blocks','test_code-blocks.md')
-block footer
-  //- no site footer
-  +_edit_link
