--- a/_source/core/test_colors.html.pug
+++ b/_source/core/test_colors.html.pug
@@ -1,12 +1,7 @@
-extends _html
+extends _html_test
 block append vars
   - path   = 'test_colors.html'
-  - title  = `Test Colors`
-block append nav
-  nav.mv: +test_nav(layout_name)
-  +thin_hr
+  - title  = `Colors`
+  - description = `Color samples.`
 block content
   +include('test','test_colors.md')
-block footer
-  //- no site footer
-  +_edit_link
