--- a/_source/_layouts/_mixins.pug
+++ b/_source/_layouts/_mixins.pug
@@ -1,5 +1,5 @@
 //- ==============================================================
-//- mixers
+//- mixins
 //- ==============================================================
 
 mixin join(a,s)
