--- a/_source/_layouts/html.pug
+++ b/_source/_layouts/html.pug
@@ -2,42 +2,45 @@ include _dove
 block vars
   -
     layout_name = 'html'
-    htmlClass = [`_${layout_name}_layout`,'no_js']
-    bodyClass = []
+    html_class  = [`_${layout_name}_layout`,'no_js']
+    body_class  = []
 block update_vars
-+front_matter
-  block front_matter
-    +l
-    .
-      layout: raw
-      use_pug: true
-      title: !{title}
-      description: !{description}
-    //- 
++front_matter: block front_matter
+  +l
+  .
+    layout: raw
+    use_pug: true
+    title: !{title}
+    description: !{description}
+  //- 
 block html
   doctype html
-  html(lang=lang||'en-US' class=htmlClass.join(' '))
+  html(lang=lang||'en-US' class=html_class.join(' '))
     +l|<!-- path        : !{path} -->
     +l|<!-- layout      : _source/_layouts/!{layout_name} -->
     +l|<!-- title       : !{title} -->
     +l|<!-- description : !{description} -->
-    head
-      block head
-        meta(charset=charset||'utf-8')/
-        +l|{% seo %}
-        meta(name="viewport" content="width=device-width,initial-scale=1")/
-        meta(http-equiv="X-UA-Compatible" content="IE=edge,chrome=1")/
-        meta#_color_scheme(name="color-scheme" content=color_scheme||'')/
-        meta#_theme_color(name="theme-color" content=theme_color||'')/
+    head: block head
+      meta(charset=charset||'utf-8')/
+      +l|{% seo %}
+      meta(name="viewport" content="width=device-width,initial-scale=1")/
+      meta(http-equiv="X-UA-Compatible" content="IE=edge,chrome=1")/
+      meta#_color_scheme(name="color-scheme" content=color_scheme||'')/
+      meta#_theme_color(name="theme-color" content=theme_color||'')/
+      block style
         style.
           .isvg svg { width:1em;height:1em }
-        block style
-        +l|{% include layout_head.html %}
-        +l|<!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
-    body
+      +l|{% include layout_head.html %}
+      +l|<!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    body(class=body_class.join(' ')): ._body_layout._layout
       block body
-        ._views
-          ._view: ._layout: +main_view
-          ._view: ._layout: +l|{% include theme_switch.html %}
-          +l|{% include layout_body.html %}
-        //- ._views
+        main._view: ._layout._main_layout: +main_view
+        aside._view._topbar_view: ._layout._topbar_layout
+          +l|{% include theme_switch.html %}
+        aside._view._lowbar_view: ._layout._lowbar_layout
+          +l|{% include copyright.html %}
+          +l|{% include credit.html %}
+        +l|{% include layout_body.html %}
+      block script
+        script.
+          ((de=document.documentElement)=>de.className=de.className.replace('no_js','js'))();
