--- a/_source/mallet/_html.pug
+++ b/_source/mallet/_html.pug
@@ -8,7 +8,7 @@ block header
   h1|{% include dove/logo.html name="!{layout_name}" %}
 block nav
   div.mv
-    +sna(layout_name+"/samples") Samples
+    +sn(layout_name+"/samples") Samples
     +angle
     b Html
     +itext|:
