--- a/_source/prime/samples.html.pug
+++ b/_source/prime/samples.html.pug
@@ -48,6 +48,6 @@ block content
   +if_dev
     +thin_hr
     nav.mv
-      +sna(layout_name+"/test")| Test page
+      +sn(layout_name+"/test")| Test page
 
   div(style="margin-top:3rem")
