--- a/_layouts/primer.html
+++ b/_layouts/primer.html
@@ -1,8 +1,7 @@
-{%- assign layout_name = "primer" -%}
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: 'en-US' }}" class="no_js">
   <!-- path        : {{ page.path }} -->
-  <!-- layout      : _layouts/{{ page.layout }} -->
+  <!-- layout      : _layouts/{{ page.layout }}.html -->
   <!-- title       : {{ page.title | default: "(untitled)" }} -->
   <!-- description : {{ page.description | default: "(undescribed)" }} -->
   <head>
