--- a/_source/test_pug.html.pug
+++ b/_source/test_pug.html.pug
@@ -1,4 +1,5 @@
 extends _html
+//- extends /_source/_layouts/html
 block append vars
   - path   = 'test_pug.html'
   - title  = 'Test Pug'
@@ -8,15 +9,13 @@ block prepend front_matter
   +l| index: false
   +l| use_footer: edit_link_only
 block content
-  if testing
-    pre.highlight: code.
-  
-  else
+  if !testing
     .
       {%-
         include 404.md
         title = "Sorry"
         description = "There is nothing to show here."
       %}
-//- block content
-  h6 test.pug
+  else
+    pre.highlight: code.
+      // testing ..
