--- a/_layouts/prime.html
+++ b/_layouts/prime.html
@@ -1,47 +1,42 @@
-{%- assign layout_name = "prime" -%}
-<!doctype html>
-<html lang="{{ page.lang | default: site.lang | default: 'en-US' }}" class="no_js _{{ layout_name }}_layout">
-  <!-- path        : {{ page.path }} -->
-  <!-- layout      : _layouts/{{ page.layout }} -->
-  <!-- title       : {{ page.title | default: "(untitled)" }} -->
-  <!-- description : {{ page.description | default: "(undescribed)" }} -->
+<!DOCTYPE html>
+<html class="no_js _prime_layout" lang="{{ page.lang | default: site.lang | default: 'en-US' }}">
+<!-- path        : {{ page.path }} -->
+<!-- layout      : {{ page.layout }} -->
+<!-- src.layout  : _source/_layouts/prime.html.pug -->
+<!-- title       : {{ page.title | default: "(untitled)" }} -->
+<!-- description : {{ page.description | default: "(undescribed)" }} -->
   <head>
-    <meta charset="{{ site.encoding | default: 'utf-8' }}" />
-    {% seo %}
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=5.0,shrink-to-fit=no" />
-    <meta id="_theme-color"  name="theme-color"  content="{{ page.theme_color | default: site.theme_color | default: '' }}" />
-    <meta id="_color-scheme" name="color-scheme" content="{{ page.color_scheme | default: site.color_scheme | default: 'light dark' }}" />
-    <style>
-      .isvg svg { width:1em;height:1em }
-    </style>
-    <link id="_style" rel="stylesheet" href="{{ site.base_url }}/assets/{{ layout_name }}/css/style.css?r={{ site.revision | default: '0' }}.{{ site.github.build_revision | default: '0' }}" />
-    {% include layout_head.html %}
-    <!--[if lt IE 9]><script src="//unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"><![endif]-->
+    <meta charset="{{ site.encoding | default: 'utf-8' }}"/>
+{% seo %}
+    <meta name="viewport" content="width=device-width,initial-scale=1"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+    <meta id="_theme_color" name="theme-color" content="{{ page.theme_color | default: site.theme_color | default: '' }}"/>
+    <meta id="_color_scheme" name="color-scheme" content="{{ page.color_scheme | default: site.color_scheme | default: 'light dark' }}"/>
+    <style>.isvg svg { width:1em;height:1em }</style>
+    <link id="_style" rel="stylesheet" href="{{ site.base_url }}/assets/prime/css/style.css?r={{ site.revision | default: '0' }}.{{ site.github.build_revision | default: '0' }}"/>
+{% include layout_head.html %}
+<!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="_body_layout _layout">
       <main class="_view">
-        <div class="_main_layout _layout container-lg px-3 my-3 markdown-body">
-          {% capture layout_content -%}{% include layout_content.html %}{%- endcapture %}
-          {{ layout_content | markdownify }}
+        <div class="_layout _main_layout container-lg px-3 my-3 markdown-body">
+{% include layout_content.html %}
         </div>
       </main>
       <aside class="_view _topbar_view">
         <div class="_layout _topbar_layout container-lg px-3">
-          {% include theme_switch.html %}
+{% include theme_switch.html %}
         </div>
       </aside>
       <aside class="_view _lowbar_view">
         <div class="_layout _lowbar_layout container-lg px-3">
-          {% include copyright.html %}
-          {% include credit.html %}
+{% include copyright.html %}
+{% include credit.html %}
         </div>
       </aside>
-      {% include layout_body.html %}
-      <script>
-        ((de=document.documentElement)=>de.className=de.className.replace('no_js','js'))();
-      </script>
+{% include layout_body.html %}
+      <script>((de=document.documentElement)=>de.className=de.className.replace('no_js','js'))();</script>
     </div>
   </body>
 </html>
