--- a/_source/_layouts/html_md.pug
+++ b/_source/_layouts/html_md.pug
@@ -1,25 +1,12 @@
 include _dove
 block vars
-  -
-    layout_name = 'html'
-    html_class  = []
-    body_class  = []
-block update_vars
-  - html_class.push(...[`_${layout_name}_layout`,'no_js']);
-+front_matter: block front_matter
-  +l
-  .
-    layout: raw
-    use_pug: true
-    title: !{title||'(untitled)'}
-    description: !{description||'(undescribed)'}
-  //- 
+  - layout_name = 'html'
 block html
   doctype html
-  html(lang=lang||'en-US' class=html_class.join(' '))
+  html(lang="{{ page.lang | default: site.lang | default: 'en-US' }}" class=`no_js _${ layout_name }_layout`)
     +l|<!-- path        : {{ page.path }} -->
     +l|<!-- layout      : {{ page.layout }} -->
-    +l|<!-- source      : _source/_layouts/!{layout_name}.pug -->
+    +l|<!-- src.layout  : _source/_layouts/!{layout_name}.html.pug -->
     +l|<!-- title       : {{ page.title | default: "(untitled)" }} -->
     +l|<!-- description : {{ page.description | default: "(undescribed)" }} -->
     head: block head
@@ -35,10 +22,10 @@ block html
         block main_style
       +l|{% include layout_head.html %}
       +l|<!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
-    body(class=body_class.join(' ')): ._body_layout._layout
+    body: ._body_layout._layout
       block body
         main._view: ._layout._main_layout: block main
-          +main_view
+          +l|{% include layout_content.html %}
         aside._view._topbar_view: ._layout._topbar_layout: block topbar
           +l|{% include theme_switch.html %}
         aside._view._lowbar_view: ._layout._lowbar_layout: block lowbar
