--- a/_source/_layouts/core.html.pug
+++ b/_source/_layouts/core.html.pug
@@ -1,5 +1,3 @@
-extends html_md
-block vars
-  - layout_name = 'core'
-block main_style
-  +main_style
+extends core
+block content
+  |{{ content }}
