--- a/_source/_layouts/mallet.html.pug
+++ b/_source/_layouts/mallet.html.pug
@@ -1,14 +1,3 @@
-extends html_md
-block vars
-  - layout_name = 'mallet'
-block main_style
-  +main_style
-block body
-  main._view: ._layout._main_layout.container-lg.markdown-body: block main
-    +l|{% include layout_content.html %}
-  aside._view._topbar_view: ._layout._topbar_layout.container-lg: block topbar
-    +l|{% include theme_switch.html %}
-  aside._view._lowbar_view: ._layout._lowbar_layout.container-lg: block lowbar
-    +l|{% include copyright.html %}
-    +l|{% include credit.html %}
-  +l|{% include layout_body.html %}
+extends mallet
+block content
+  |{{ content }}
