--- a/_source/config.md.pug
+++ b/_source/config.md.pug
@@ -1,49 +1,21 @@
 include /_source/_layouts/_dove
 +yml.
-  # _config.pug
-  version      : !{version}
-  revision     : !{revision}
-  title        : !{site_title}
-  description  : !{site_description}
-  author       : !{author}
-  year         : !{year}
-  base_url     : !{base_url}
-  home_url     : !{home_url}
-
-  lang         : !{lang}
-  theme_color  : !{theme_color}
-  color_scheme : !{color_scheme}
-
-  ghost        : !{ghost||"[nil]"}
-
-  source_url   : !{source_url}
-.
-  {: #config_pug }
-  <style>article #config_pug pre.highlight { max-height:213px }</style>
-+l
-+yml.
-  # _config.yml
-  version      : {{ site.version | default: "[nil]" }}
-  revision     : {{ site.revision | default: "[nil]" }}{{'.'}}{{ site.github.build_revision | default: "[nil]" }}
   title        : {{ site.title | default: "[nil]" }}
   description  : {{ site.description | default: "[nil]" }}
   author       : {{ site.author | default: "[nil]" }}
-  year         : {{ "now" | date: "%Y" }}
-  base_url     : {{ site.base_url | default: "[nil]" }}
-  home_url     : {{ site.home_url | default: "[nil]" }}
+  
+  version      : {{ site.version | default: "[nil]" }}
+  revision     : {{ site.revision | default: "[nil]" }}{{'.'}}{{ site.github.build_revision | default: "[nil]" }}
 
-  theme        : {{ site.theme | default: "[nil]" }}
-  remote_theme : {{ site.remote_theme | default: "[nil]" }}
+  baseurl      : {{ site.baseurl | default: "[nil]" }}
+  home_url     : {{ site.home_url | default: "[nil]" }}
+  live_url     : {{ site.live_url | default: "[nil]" }}
 
   lang         : {{ site.lang | default: "[nil]" }}
-  theme_color  : {{ site.theme_color | jsonify | default: "[nil]" }}
-  color_scheme : {{ site.color_scheme | default: "[nil]" }}
 
   ghost                : {{ site.ghost | default: "[nil]" }}
   google_analytics     : {{ site.google_analytics | default: "[nil]" }}
   cloudflare_analytics : {{ site.cloudflare_analytics | default: "[nil]" }}
-
-  source_url   : {{ site.github.repository_url }}
 .
   {: #config_yml }
-  <style>article #config_yml pre.highlight { max-height:213px }</style>
+  <style>article #config_yml pre.highlight {  }</style>
